--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     },
     "target-dir": "dpro/WhoopsBundle",
     "require": {
-        "symfony/syfony": ">=2.1"
+        "symfony/symfony": ">=2.1"
     },
     "require-dev": {
         "filp/whoops":  "dev-master"
