--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
     },
     "target-dir": "dpro/WhoopsBundle",
     "require": {
-        "symfony/symfony": ">=2.1"
-    },
-    "require-dev": {
+        "symfony/symfony": ">=2.1",
         "filp/whoops":  "dev-master"
-    }
+    },
 }
